[package]
name = "cpux"
description = "Retained-mode GUI Framework"
version = "0.2.0"
authors = ["Pjdur"]
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["graphics", "framework", "gui", "window"]
categories = ["gui", "rendering", "graphics"]
repository = "https://github.com/Pjdur/cpux"

[dependencies]
image = "0.24"
imageproc = "0.23.0"
rusttype = "0.9.0"
winit = "0.28.7"
pixels = "0.13"
env_logger = "0.11.8"
